# arcana-engine-cli

./: .replit  CHANGELOG.md  LICENSE  README.md  arcana-engine-cli.cabal  replit.nix
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
readings/: sess-635A.txt  sess-8FB7.txt  sess-D8A1.md
src/: OpenAI.hs  Spread.hs
