cabal-version:      3.0
name:               arcana-engine-cli
version:            0.1.0.0

synopsis: A terminal-based AI tarot reader built in Haskell
description:
  Arcana Engine CLI lets users choose tarot spreads, input cards (with reversals),
  and receive GPT-based interpretations. Outputs are saved as Markdown logs for reflection.

license:            BSD-3-Clause
license-file:       LICENSE
author:             dakotafabro
maintainer:         dakotafabrodev@gmail.com
category:           Game
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable arcana-engine-cli
    import:           warnings
    main-is:          Main.hs
    build-depends:    base >=4.14 && <5
                   , ansi-terminal
                   , text
                   , aeson
                   , http-conduit
                   , containers
                   , bytestring
                   , optparse-applicative
                   , mtl
                   , dotenv
                   , time
                   , random
                   , directory
    hs-source-dirs:   app, src
    default-language: Haskell2010

test-suite arcana-engine-test
    type:                exitcode-stdio-1.0
    hs-source-dirs:      test
    main-is:             Spec.hs
    build-depends:       base, arcana-engine-cli, hspec
    default-language:    Haskell2010
